--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
     container_name: user-service
     ports:
       - "50001:50001"
+    depends_on:
+      - rabbitmq  
     environment:
       # SPRING_CLOUD_CONFIG_URI: http://52.78.2.93:8888
       EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE: http://3.34.96.114:8761/eureka
@@ -29,6 +31,8 @@ services:
     container_name: hr-service
     ports:
       - "50002:50002"
+    depends_on:
+      - user-service
     environment:
       # SPRING_CLOUD_CONFIG_URI: http://52.78.2.93:8888
       EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE: http://3.34.96.114:8761/eureka
@@ -40,6 +44,8 @@ services:
     container_name: job-service
     ports:
       - "50004:50004"
+    depends_on:
+      - hr-service
     environment:
       # SPRING_CLOUD_CONFIG_URI: http://52.78.2.93:8888
       EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE: http://3.34.96.114:8761/eureka
@@ -50,6 +56,8 @@ services:
     container_name: process-service
     ports:
       - "50005:50005" 
+    depends_on:
+      - job-service
     environment:
       # SPRING_CLOUD_CONFIG_URI: http://52.78.2.93:8888
       EUREKA_CLIENT_SERVICE-URL_DEFAULT-ZONE: http://3.34.96.114:8761/eureka
